--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rygr-util",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Utilities for Rygr",
   "main": "index.js",
   "files": [
@@ -17,10 +17,13 @@
     "url": "https://github.com/camacho/rygr-util/issues"
   },
   "homepage": "https://github.com/camacho/rygr-util",
+  "scripts": {
+    "test": "gulp test"
+  },
   "dependencies": {
     "chalk": "^0.5.1",
     "dateformat": "^1.0.8-1.2.3",
-    "glob": "^4.0.4",
+    "glob-all": "^3.0.1",
     "q": "^1.0.1",
     "rygr.async-queue": "^1.1.0",
     "underscore": "^1.6.0",
@@ -28,15 +31,15 @@
   },
   "devDependencies": {
     "coffee-script": "^1.7.1",
+    "del": "^1.1.0",
     "gulp": "^3.8.6",
-    "gulp-browserify": "^0.5.0",
     "gulp-bump": "^0.1.10",
     "gulp-changed": "^0.4.0",
     "gulp-coffee": "^2.1.1",
+    "gulp-jasmine": "^1.0.1",
     "gulp-load-plugins": "^0.5.3",
     "gulp-notify": "^1.4.0",
     "gulp-plumber": "^0.6.4",
-    "gulp-rimraf": "^0.1.0",
     "run-sequence": "^0.3.6"
   }
 }
